--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "app-chat",
   "version": "0.1.0",
   "private": true,
+    "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
+
   },
   "dependencies": {
     "jsonwebtoken": "^9.0.3",
@@ -18,6 +20,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.8"
+
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -25,4 +28,6 @@
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4"
   }
+ 
+
 }
