--- a/package.json
+++ b/package.json
@@ -2,25 +2,23 @@
   "name": "app-chat",
   "version": "0.1.0",
   "private": true,
-    "type": "module",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
-
   },
   "dependencies": {
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.0",
-    "next": "16.0.7",
+    "next": "^16.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.8"
-
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -28,6 +26,4 @@
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4"
   }
- 
-
 }
